static/style.css
/*
Date: March 2015
Description: Basic HTML5/CSS3 layout built for a responsive framework
Version: 1.0
Author: Eric Su
 */

body {
    background-color: white;
    color: #000305;
    font-size: 90%; /* Base font size is 14px */
    /* font-family: 'Open Sans', sans-serif; */
    font-family: 'Roboto', sans-serif;
    line-height: 1.5;
    text-align: left;
}

h1 {
    font-weight: 100;
}

h2 {
    margin-bottom: 25px;
    font-weight: 100;
    color: #2c3e50;
    text-align: center;
}

p {
    font-size: 105%;
}

a {
    text-decoration: none;
}

a:link, a:visited {
    color: #2c3e50;
    text-decoration: none;
}

a:hover, a:active {
    color: #34495e; 
}

.body {
    margin: 0 auto; /* keeps it centered */
    /*  width: 70%; */
    clear: both;
}

.main-header img {
    width: 100%;
    height: auto;
    margin-top: 10px;
}

.main-header nav {
    background-color: #FFC107;
    height: 50px;
    position: fixed;
    right: 0;
    left: 0;
    z-index: 1030;
    top: 0;
    box-shadow: 0 0 5px #222;
}

.main-header nav ul {
    list-style: none; /* gets rid of bullets */
    margin: 5px auto;
    margin-right: 100px;
}

.main-header nav ul li {
    float: right;
    display: inline;
}

.main-header nav a:link, .main-header nav a:visited {
    color: #000;
    font-weight: 600;
    font-size: 150%;
    display: inline-block;
    padding: 10px 25px; /* bottom-top, left-right */
    margin: 0 auto;
    height: 100%;
}

.main-header nav a:hover, .main-header nav a:active, 
.main-header nav .active a:link, .main-header nav .active a:visited {
    /*background-color: #999;*/
    background-color: transparent;
    color: #fff;
    font-weight: 600;
    font-size: 150%;
    text-shadow: none;
    text-decoration: none;
}

.main-header nav ul li a {
}

.title {
    margin-top: -6px;
    background-color: rgb(49, 49, 49);
    box-shadow: 0 0 10px #000;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

.title a h2 {
    font-family: 'Open Sans', sans-serif;
    margin: 2px 0;
    color: #fff;
}

.navbar-form {
    width: 100%;
    margin: 4px 0;
    padding: 0;
}

.input-group {
    width: 100%;
}

.form-group {
    width: 100%;
    margin: 4px 0;
}

.input-group-btn .btn, .input-group-btn .btn:hover {
    background-color: rgb(49, 49, 49);
    color: #fff;
}

.search .btn {
    margin: 4px 10px;
    background-color: rgb(49, 49, 49);
    color: #fff;
}

.search .btn:hover {
    margin: 4px 10px;
    background-color: rgb(59, 59, 59);
    color: #fff;
}

.dropdown-menu {
    font-size: 100%;
    background-color: #FFC107;
}

.dropdown-menu li {
    width: 100%;
    text-align: center;
}

.dropdown-menu a:link, .dropdown-menu a:visited {
    color: #fff;
    font-weight: 600;
    font-size: 100%;
    display: inline-block;
    padding: 10px 25px; /* bottom-top, left-right */
    margin: 0 auto;
    height: 100%;
}

.dropdown-menu a:hover, .dropdown-menu a:active, 
.dropdown-menu .active a:link, .dropdown-menu .active a:visited {
    /*background-color: #999;*/
    font-weight: 600;
    font-size: 100%;
    text-shadow: none;
    text-decoration: none;
}

.jumbotron {
    color: #fff;
    height: 70vh;
    background-image: url("http://www.olympic.org/Global/Images/Home%20page/pushblocks/2015/03/home-woo-vincent-jay.jpg");
    background-position: center center;
    background-size: cover;
    box-shadow: inset 0 -10px 130px -20px #000;
    margin-top: 30px;
    margin-bottom: 0;
}

.jumbotron h1 {
    text-align: right;
    text-shadow: 0 0 15px #000;
}

.jumbotron p {
    text-align: right;
    text-shadow: 0 0 9px #000;
}

.container {
    width: 100%;
    padding: 0;
}

.results-container {
    width: 70%;
    margin: 20px auto;
    background: rgb(237, 237, 217);
    border-style: solid;
    border-width: 1px;
    border-color: rgb(170, 170, 150);
    box-shadow: 0 0px 45px -30px #000;
}

.results-container .title {
    position: relative;
    z-index: 730;
    background-color: rgb(84, 83, 80);
    box-shadow: 0 0 3px #000;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.results-container h2 {
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    background-color: rgb(84, 83, 80);
    text-align: left;
    margin-top: 6px;
    padding: 8px;
    color: #fff;
}

.search {
    height: 70px;
    padding: 14px 5px;
    margin-top: -12px;
    background-color: #FFC107;
    box-shadow: 0 1px 4px -2px #000;
}

.results {
    margin: 40px;
}

.col-md-3, .col-md-4, .col-md-9 {
    margin: 0 0 20px 0;
}

.featured_athletes_facts {
    padding: 0px;
}

.tile {
    background-color: #fff;
    border-style: solid;
    border-width: 1px;
    border-color: rgb(170, 170, 150);
    height: 230px;
    overflow: scroll;
}

.list-group {
    margin: 0;
}

.table {
    background-color: rgb(77, 77, 77);
    color: #eee;
    margin: 0;
}

.table-hover thead tr th {
    border-color: rgb(49, 49, 49);
}

.table-hover tbody tr td {
    border-color: rgb(99, 99, 99);
}

.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
    background-color: #FFC107;
    color: black;
}

.main-content {
    width: 100%;
    line-height: 25px;
    margin: 0;
    /*  overflow: hidden; */
}

.content {
    width: 100%;
    /* float: right; */
    margin: 0;
}

.panel {
    background-color: rgb(170, 170, 150);
    padding: 0;
    width: 100%;
    height: 40px;
    margin: 0 auto;
    border-radius: 0;
    box-shadow: 0 2px 10px #000;
}

.panel nav {
    height: 100%;
    margin: 0 auto;
    text-align: center;
}

.panel nav ul {
    height: 100%;
    list-style: none; /* gets rid of bullets */
    margin: 0 auto;
}

.panel nav ul li {
    text-align: center;
    height: 100%;
    display: inline;
    margin: 0 auto;
}

.panel nav a:link, .panel nav a:visited {
    color: #000;
    font-weight: 600;
    font-size: 120%;
    display: inline-block;
    padding: 8px 25px; /* bottom-top, left-right */
}
/* ... */

